code/tui/snapshots/fullscreen/mode/wrapped_command_result_detail_indent.snap
---
source: code/tui/src/app/mode_tests.rs
expression: render(&app)
---
  .                                  [Dashboard]  
                                                  
> /command                                        
 └─ xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
    xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx            
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
  ──────────────────────────────────────────────  
  >                                               
  ───────────────────────────── Automatic model   
  ⏸ Manual                                        
  Enter send · ← Dashboard · shift+tab mode
